k8s/cluster-apps/audiobookshelf/custom.yaml
apiVersion: v1
kind: Service
metadata:
  name: audiobookshelf
  namespace: default
spec:
  selector:
    app: audiobookshelf
  type: ClusterIP
  ports:
    - name: http
      port: 13378
      targetPort: 80
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: audiobookshelf-ingress
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - audiobookshelf.k8s.javydekoning.com
      secretName: javydekoning-com-tls
  rules:
    - host: audiobookshelf.k8s.javydekoning.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: audiobookshelf
                port:
                  name: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: audiobookshelf
  namespace: default
  labels:
    app: audiobookshelf
spec:
  selector:
    matchLabels:
      app: audiobookshelf
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: audiobookshelf
    spec:
      containers:
        - name: audiobookshelf
          image: ghcr.io/advplyr/audiobookshelf:2.2.17
          imagePullPolicy: Always
          resources:
            requests:
              memory: "1Gi"
              cpu: "500m"
            limits:
              memory: "1Gi"
              cpu: "500m"
          ports:
            - containerPort: 80
              protocol: TCP
          volumeMounts:
            - name: downloads
              mountPath: /config
              subPath: config/audiobookshelf/config/
            - name: downloads
              mountPath: /metadata
              subPath: config/audiobookshelf/metadata/
            - name: downloads
              mountPath: /podcasts
              subPath: podcasts
            - name: downloads
              mountPath: /audiobooks
              subPath: audiobooks
      volumes:
        - name: downloads
          hostPath:
            path: /downloads
            type: DirectoryOrCreate
      restartPolicy: Always
